# ChangeLog for dev-perl/Cairo
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Cairo/ChangeLog,v 1.49 2008/09/10 14:11:10 tove Exp $

  10 Sep 2008; Torsten Veller <tove@gentoo.org> -Cairo-1.02.2.ebuild,
  -Cairo-1.04.0.ebuild, -Cairo-1.04.1.ebuild, -Cairo-1.04.5.ebuild:
  Cleanup

  13 Jun 2008; Jeroen Roovers <jer@gentoo.org> Cairo-1.06.0.ebuild:
  Stable for HPPA (bug #225185).

  10 Jun 2008; Raúl Porcel <armin76@gentoo.org> Cairo-1.06.0.ebuild:
  alpha/ia64/sparc/x86 stable wrt #225185

  09 Jun 2008; Brent Baude <ranger@gentoo.org> Cairo-1.06.0.ebuild:
  stable ppc64, bug 225185

  07 Jun 2008; Kenneth Prugh <ken69267@gentoo.org> Cairo-1.06.0.ebuild:
  amd64 stable, bug #225185

  07 Jun 2008; nixnut <nixnut@gentoo.org> Cairo-1.06.0.ebuild:
  Stable on ppc wrt bug 225185

*Cairo-1.06.0 (22 Apr 2008)

  22 Apr 2008; Torsten Veller <tove@gentoo.org> +Cairo-1.06.0.ebuild:
  Version bump

*Cairo-1.04.5 (08 Apr 2008)

  08 Apr 2008; Torsten Veller <tove@gentoo.org> +Cairo-1.04.5.ebuild:
  Version bump (#206661).

  13 Mar 2008; Jeroen Roovers <jer@gentoo.org> Cairo-1.04.1.ebuild:
  Stable for HPPA too.

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> Cairo-1.04.1.ebuild:
  amd64 stable

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org> Cairo-1.04.1.ebuild:
  Stable on ppc.

  22 Jul 2007; Tom Gall <tgall@gentoo.org> Cairo-1.04.1.ebuild:
  stable on ppc64

  11 Jul 2007; Raúl Porcel <armin76@gentoo.org> Cairo-1.04.1.ebuild:
  alpha/ia64 stable

  09 Jul 2007; Raúl Porcel <armin76@gentoo.org> Cairo-1.04.1.ebuild:
  x86 stable

  09 Jul 2007; Michael Cummings <mcummings@gentoo.org> Cairo-1.04.1.ebuild:
  Marking sparc stable

  05 Jul 2007; Tom Gall <tgall@gentoo.org> Cairo-1.04.0.ebuild:
  stable on ppc64

  21 Jun 2007; Michael Cummings <mcummings@gentoo.org> Cairo-1.04.0.ebuild:
  Marking sparc stable

  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org> Cairo-1.04.1.ebuild: