@@ -1,4 +1,6 @@
 DIST Cairo-1.060.tar.gz 90111 RMD160 f514f5065b53ca740ea415ec97f0d45f5208b637 SHA1 af0334d7732f991509c0b90e509040d4bbd2b939 SHA256 34e738467ad3517dd061202617245f03431059b3980476c43d8e06bf2ce7bfca
+DIST Cairo-1.061.tar.gz 90604 RMD160 eeed3fc830276a794b145ab9da2770e3cb856a65 SHA1 534500b85935a0fbfaeff76b4ff04067021cd8c7 SHA256 1d253f9d48bd36efdd4b962c169659182126baac9a6c6bb820406b48de9367a0
 EBUILD Cairo-1.06.0.ebuild 735 RMD160 c781c3c832965fa01d173549fc7a3bd9d1d545c2 SHA1 2238e4c2a7c106cc1e9b50fc7f3e52f409f6305e SHA256 9cf620da1531ac05af42727ae941aede3d7753c7e2cda7646f0bb817cf417d3a
-MISC ChangeLog 5352 RMD160 17421241fcbba9ec6bb7c4322afef7c8e9a027ef SHA1 9a0f741c17705234e0ab209c9dafa0e42418a00c SHA256 08e635d607b299db4870fd4e500527246da455dabb9fa1febd48e3d0abbcd678
+EBUILD Cairo-1.06.1.ebuild 664 RMD160 e6ad1f48aef6eca25d23001c620b37f195b6cad1 SHA1 11d677f32c126e5ec71691a93a6444c4148d2de0 SHA256 549b8e6e1737aedd7ae344cb47946f21899504f990fc92f281dc9ef2b8195281
+MISC ChangeLog 5467 RMD160 c4a8e58ee7c7f22afb380297ecab95c4ac0214ac SHA1 f7317b2a8511b07c3825e4436132f664a06a35ee SHA256 5b7e51a67e23c327d410f816026046e6aa46179470c689a6d8b6d52e9e113232
 MISC metadata.xml 158 RMD160 03e4d8164c58bc61660cbaf489d4e3652de0feb7 SHA1 9a84117c6fb70288426e20c84deaf16f4381a549 SHA256 1fef4c0af5f71b777110f54d9dfbd27d6c85c750fca007f4a2fb38345ebbb710
